Fixed header collapse issue

--- a/themes/top-menu.css
+++ b/themes/top-menu.css
@@ -546,6 +546,7 @@
         list-style: none;
         position: absolute;
         background-color: #004C93;
+        width: 100vw;
         height: 100vh;
         left: 100%;
         top: 0;
@@ -658,6 +659,7 @@
             display: block;
             float: right;
             height: auto;
+            width: 100%; 
         }
         #header .nav-list ul li {
             display: inline-block;
